--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.6",
+    "@react-oauth/google": "^0.12.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/nodemailer": "^6.4.17",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -21,6 +24,7 @@
     "embla-carousel-auto-scroll": "^8.5.1",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.15.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "nodemailer": "^6.9.16",
@@ -34,11 +38,13 @@
     "react19-google-recaptcha-v3": "^1.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/prop-types": "^15.7.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-google-recaptcha": "^2.1.9",
